--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,34 @@
-body{
+body {
 	margin: 0;
+	padding: 0;
+	font-family: 'Lora', "helvetica", serif;
+	background-color: white;
+}
+
+.masthead.segment {
+	min-height: 600px;
+}
+
+/*.ui.container {
+	width: 1127px;
+	margin-right: auto;
+	margin-left: auto;
+}*/
+
+#hdrImg {
+	width: 100%;
+	height: auto;
+	z-index: -1;
+	position: absolute;
+	top: 0;
+}
+
+#menu {
+	max-width: 1024px;
+	margin: 0 auto;
+}
+
+@media all and (max-width: 700px) {
+	#menu{display: none;}
+	.masthead.segment{min-height: 300px;}
 }
