--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ body {
 
 #bttn {
 	position: fixed;
-	margin: 10px 0px 0px 10px;
+	margin: 30px 0px 0px 10px;
 	float: left;
 	display: none;
 }
@@ -45,7 +45,9 @@ body {
 }
 
 @media all and (max-width: 700px) {
-	#menu{display: none;}
+	/*#menu{display: none;}*/
 	.masthead.segment{min-height: 300px;}
 	#bttn{display: inline;}
+	#sdBr{display: none;}
+
 }
