--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,18 @@ body {
 
 .ui.medium.image {
 	float:left;
+	padding:10px 0px;
+	cursor: pointer;
+}
+
+.image.mod {
+	width: 680px;
+	height: auto;
+	top: 0;
+}
+
+.close.icon {
+	cursor: pointer;
 }
 
 @media all and (max-width: 700px) {
