--- a/css/main.css
+++ b/css/main.css
@@ -37,8 +37,10 @@ body {
 }
 
 #bttn {
-	position: fixed;
-	margin: 30px 0px 0px 10px;
+	/*position: fixed;*/
+	/*margin: 30px 0px 0px 10px;*/
+	margin-left: -90px;
+	margin-top: 50px;
 	float: left;
 	display: none;
 }
@@ -65,7 +67,7 @@ body {
 }
 
 @media all and (max-width: 700px) {
-	/*#menu{display: none;}*/
+	#menu{display: none;}
 	.masthead.segment{min-height: 300px;}
 	#bttn{display: inline;}
 	#sdBr{display: none;}
