--- a/css/main.css
+++ b/css/main.css
@@ -37,11 +37,10 @@ body {
 }
 
 #bttn {
-	/*position: fixed;*/
+/*	position: fixed;*/
 	/*margin: 30px 0px 0px 10px;*/
-	margin-left: -90px;
-	margin-top: 50px;
-	float: left;
+/*	float: left;*/
+	margin-left: 10px;
 	display: none;
 }
 
