--- a/css/main.css
+++ b/css/main.css
@@ -37,10 +37,9 @@ body {
 }
 
 #bttn {
-/*	position: fixed;*/
-	/*margin: 30px 0px 0px 10px;*/
-/*	float: left;*/
-	margin-left: 10px;
+	position: fixed;
+	margin: 30px 0px 0px 10px;
+	float: left;
 	display: none;
 }
 
@@ -66,7 +65,7 @@ body {
 }
 
 @media all and (max-width: 700px) {
-	#menu{display: none;}
+	/*#menu{display: none;}*/
 	.masthead.segment{min-height: 300px;}
 	#bttn{display: inline;}
 	#sdBr{display: none;}
