--- a/css/main.css
+++ b/css/main.css
@@ -28,12 +28,12 @@ body {
 }
 
 #hdrImg {
-	top: 0;
-	z-index: -1;
-	position: absolute;
+	margin-top: -700px;
+	position: fixed;
 	width: 100%;
 	height: 100%;
 	opacity: 1;
+	z-index: -10;
 }
 
 #bttn {
