--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,30 @@
 body {
 	margin: 0;
 	padding: 0;
-	font-family: 'Lora', "helvetica", serif;
 	background-color: white;
 }
 
 .masthead.segment {
-	min-height: 600px;
+	max-height: 600px;
 }
 
 #precontainer {
-	font-size: 2em;
+	font-size: 1.5em;
+	color: black;
+}
+
+.ui.masthead.basic.inverted.segment,
+.ui.sizer.vertical.basic.inverted.segment {
+	background-color: white;
+	color:black;
+}
+
+.ui.huge.centered.header {
+	font-family: 'Lora', "helvetica", serif;
 }
 
 #container {
-	margin-top: 40px;
+	margin-top: 100px;
 }
 
 /*.ui.container {
@@ -28,7 +38,7 @@ body {
 }
 
 #hdrImg {
-	margin-top: -700px;
+	margin-top: -300px;
 	position: fixed;
 	width: 100%;
 	height: 100%;
@@ -48,7 +58,15 @@ body {
 	margin: 0 auto;
 }
 
-.ui.medium.image {
+.ui.divider {
+	padding: 20px 0px;
+}
+
+.ui.one.special.cards {
+	padding: 0px 0px;
+}
+
+.ui.medium.image.left.floated {
 	float:left;
 	padding:10px 0px;
 	cursor: pointer;
@@ -64,10 +82,17 @@ body {
 	cursor: pointer;
 }
 
+.hider {
+	display: none;
+	float: left;
+	margin: 30px 0px;
+}
+
 @media all and (max-width: 700px) {
 	/*#menu{display: none;}*/
 	.masthead.segment{min-height: 300px;}
 	#bttn{display: inline;}
 	#sdBr{display: none;}
+	#hdrImg{display: none;}
 
 }
