--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ body {
 }
 
 #precontainer {
+	margin-top: 80px;
 	font-size: 1.5em;
 	color: black;
 }
@@ -24,7 +25,7 @@ body {
 }
 
 #container {
-	margin-top: 100px;
+	margin-top: 160px;
 }
 
 /*.ui.container {
@@ -58,12 +59,16 @@ body {
 	margin: 0 auto;
 }
 
+#FUCKWIT {
+	padding: 100px;
+}
+
 .ui.divider {
 	padding: 20px 0px;
 }
 
-.ui.one.special.cards {
-	padding: 0px 0px;
+.ui.centered.fluid.card {
+	margin-bottom: 80px;
 }
 
 .ui.medium.image.left.floated {
@@ -82,10 +87,10 @@ body {
 	cursor: pointer;
 }
 
-.hider {
+.hider.ui.segment {
 	display: none;
 	float: left;
-	margin: 30px 0px;
+	margin-bottom: 80px;
 }
 
 @media all and (max-width: 700px) {
