contact info for mobile

--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,9 @@ body {
 	font-family: 'Lora', "helvetica", serif;
 }
 
+#theHead {
+	font-family: 'Lora', "helvetica", serif;
+}
 
 #dropdown-icon {
 	margin-top: 40px;
@@ -124,8 +127,7 @@ body {
 @media all and (max-width: 700px) {
 	/*#menu{display: none;}*/
 	.masthead.segment{min-height: 300px;}
-	#bttn{display: inline;}
-	#sdBr{display: none;}
+	#sdBr{display: inline;}
 	#hdrImg{display: none;}
 	#FUCKWIT {padding: 0px;}
 	.ui.centered.fluid.card {margin-bottom: 40px;}
