--- a/css/main.css
+++ b/css/main.css
@@ -124,10 +124,15 @@ body {
 
 }
 
+#jankless {
+	display: none;
+}
+
 @media all and (max-width: 700px) {
 	/*#menu{display: none;}*/
 	.masthead.segment{min-height: 300px;}
-	#sdBr{display: inline;}
+	#jankless{display: inline;}
+	#sdBr{display: none;}
 	#hdrImg{display: none;}
 	#FUCKWIT {padding: 0px;}
 	.ui.centered.fluid.card {margin-bottom: 40px;}
