--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,8 @@ body {
 
 #precontainer {
 	margin-top: 200px;
-	font-size: 1.2em;
+	padding: 0;
+	font-size: 1.4em;
 }
 
 .ui.masthead.basic.inverted.segment,
@@ -75,6 +76,8 @@ body {
 	height: 100%;
 	opacity: 1;
 	z-index: -10;
+	-webkit-filter: blur(1px);
+	filter: blur(1px);
 }
 
 #bttn {
