--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,10 @@ body {
 	background-color: white;
 }
 
+p {
+	color:black;
+}
+
 .masthead.segment {
 	max-height: 600px;
 }
@@ -21,11 +25,9 @@ body {
 
 .ui.masthead.basic.segment,
 .ui.sizer.vertical.basic.segment {
-	color: white;
 }
 
 .ui.huge.centered.header {
-	color: white;
 	font-family: 'Lora', "helvetica", serif;
 }
 
@@ -46,23 +48,20 @@ body {
 }
 
 #container {
-	margin-top: 160px;
+	margin: 160px 0px 0px 0px;
 }
 
-/*.ui.container {
-	width: 1127px;
-	margin-right: auto;
-	margin-left: auto;
-}*/
-
 #sdBr {
-	margin-top: 60px;
 	padding-top: 40px;
 }
 
+#custom {
+	width: 22px;
+	padding-top: 3px;
+}
 .custom {
 	width: 22px;
-	padding-top: 1px;
+	padding-top: 10px;
 }
 
 .ui.basic.inverted.button {
@@ -87,13 +86,8 @@ body {
 	display: none;
 }
 
-#menu {
-	max-width: 1024px;
-	margin: 0 auto;
-}
-
-#FUCKWIT {
-	padding: 40px;
+#covers {
+/*	max-width: 720px;*/
 }
 
 .ui.divider {
