--- a/css/main.css
+++ b/css/main.css
@@ -31,9 +31,16 @@ p {
 /*	font-family: 'Lora', "helvetica", serif;*/
 }
 
-#theHead {
-/*	font-family: 'Lora', "helvetica", serif;*/
+/*
+#theHead a{
+	color: crimson;
+	text-decoration: none;
 }
+
+#theHead a:hover{
+	color: maroon;
+}
+*/
 
 #dropdown-icon {
 	margin-top: 40px;
